my portfolio website 3rd git commit

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,22 +60,23 @@
       </div>
 
       <div class="about-info">
-        <p>Name:</p>
-        <h4>Mary Hardy</h4>
+        <div class="info-card">
+          <p>Name</p>
+          <h4>Mary Hardy</h4>
+        </div>
+        <div class="info-card">
+          <p>Email</p>
+          <h4>example@gmail.com</h4>
+        </div>
+        <div class="info-card">
+          <p>Date of Birth</p>
+          <h4>11 November 1987</h4>
+        </div>
+        <div class="info-card">
+          <p>From</p>
+          <h4>Los Angeles,USA</h4>
+        </div>
       </div>
-      <div class="about-info">
-        <p>Email:</p>
-        <h4>info@gmail.com</h4>
-      </div>
-      <div class="about-info">
-        <p>Date of Birth:</p>
-        <h4>11 November 1987 </h4>
-      </div>
-      <div class="about-info">
-        <p>From</p>
-        <h4>Los Angeles,USA</h4>
-      </div>
-    </div>
   </section>
 </body>
 
