--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,50 @@
         </div>
       </div>
   </section>
+
+  <section id="skills">
+    <div class="skills-container">
+      <div class="section-heading">
+        <h1>What I do</h1>
+        <p>I have more than 10 years experience building software for clients all over the world. Below is a quick
+          overview of my
+          main technical skill sets and technologies i use. Want to find out more about my experience? Check out my
+          online resume
+          and project portfolio.</p>
+      </div>
+
+      <div class="skills-box">
+        <div class="skills-card">
+          <img src="images/icons/js.png" alt="">
+          <h3>Vennila JavaScript</h3>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skills-card">
+          <img src="images/icons/react.png" alt="">
+          <h3>React</h3>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skills-card">
+          <img src="images/icons/nodejs.png" alt="">
+          <h3>Node js</h3>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skills-card">
+          <img src="images/icons/mongo.png" alt="">
+          <h3>Mongo DB</h3>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
