--- a/prtfolio.html
+++ b/prtfolio.html
@@ -104,76 +104,96 @@
         <div class="skills-card">
           <img src="images/icons/js.png" alt="">
           <h3>Vennila JavaScript</h3>
-          <p>List skill/technologies here.</p>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
         </div>
 
         <div class="skills-card">
           <img src="images/icons/react.png" alt="">
           <h3>React</h3>
-          <p>List skill/technologies here.</p>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
         </div>
 
         <div class="skills-card">
           <img src="images/icons/nodejs.png" alt="">
           <h3>Node js</h3>
-          <p>List skill/technologies here.</p>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
         </div>
 
         <div class="skills-card">
           <img src="images/icons/mongo.png" alt="">
           <h3>Mongo DB</h3>
-          <p>List skill/technologies here.</p>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
         </div>
       </div>
-
     </div>
   </section>
 
-  <!-- RESUME -->
   <section id="resume">
     <div class="section-heading">
-      <h1>A summary of My Resume</h1>
+      <h1>A Summary of My Resume</h1>
     </div>
-
-    <!-- 🔴 FIXED: resume-container (আগে rusume-container ছিল) -->
     <div class="resume-container">
-
       <div class="education">
         <h2 class="section-title">My Education</h2>
-
         <div class="resume-card">
           <h3 class="card-title">Master in Computer Engineering</h3>
           <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here.</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
         <hr>
-
         <div class="resume-card">
           <h3 class="card-title">Master in Computer Engineering</h3>
           <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here.</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
+        <hr>
+        <div class="resume-card">
+          <h3 class="card-title">Master in Computer Engineering</h3>
+          <p class="card-info">Harvard University / 2015 - 2017</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
       </div>
 
-      <div class="experience">
+      <div class="Experience">
         <h2 class="section-title">My Experience</h2>
-
         <div class="resume-card">
-          <h3 class="card-title">Master in Computer Engineering</h3>
-          <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here.</p>
+          <h3 class="card-title">Sr. Font End Developer</h3>
+          <p class="card-info">Apple Inc / 2020 - Current</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
         <hr>
-
         <div class="resume-card">
-          <h3 class="card-title">Master in Computer Engineering</h3>
-          <p class="card-info">Harvard University / 2015 - 2017</p>
-          <p class="card-text">List skill/technologies here.</p>
+          <h3 class="card-title">Jr. Font End Developer</h3>
+          <p class="card-info">Dribbble Inc / 2018 - 2022</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
+        <hr>
+        <div class="resume-card">
+          <h3 class="card-title">HTML Developer</h3>
+          <p class="card-info">Adobe Inc / 2017 - 2018</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
       </div>
 
     </div>
   </section>
+
 
 </body>
 
